Add metdata apis
